--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,6 +3,7 @@ pipeline{
     stages{
         stage('Setup python virtual env'){
             steps {
+            cleanWs()
             sh '''
             chmod +x envsetup.sh
             ./envsetup.sh
