--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,28 +3,29 @@ pipeline{
     stages{
         stage('Setup python virtual env'){
             steps {
-            cleanWs()
-            sh '''
-            chmod +x envsetup.sh
-            ./envsetup.sh
-            '''}
+                cleanWs()
+                sh '''
+                    chmod +x envsetup.sh
+                    ./envsetup.sh
+                '''
+            }
        }
         stage('setup Gunicorn'){
             steps
             {
-              sh '''
-            chmod +x gunicorn.sh
-            ./gunicorn.sh
-            '''
+                sh '''
+                    chmod +x gunicorn.sh
+                    ./gunicorn.sh
+                '''
             }
         }
         stage('setup NGINX'){
             steps
             {
-             sh '''  
-             chmod +x nginx.sh
-             /.nginx.sh
-             '''  
+                sh '''  
+                    chmod +x nginx.sh
+                    ./nginx.sh
+                '''  
             }
 
         }
