--- a/gunicorn.service
+++ b/gunicorn.service
@@ -6,9 +6,9 @@ After=network.target
 [Service]
 User=root
 Group=www-data
-WorkingDirectory=$WORKSPACE/djangoproject
-ExecStart=$WORKSPACE/bin/gunicorn \
-          --error-logfile $WORKSPACE/logs/error.log \
+WorkingDirectory=/home/$USER/django/djangoproject
+ExecStart=/home/$USER/django/bin/gunicorn \
+          --error-logfile /home/$USER/django/logs/error.log \
           --workers 3 \
           --capture-output --log-level debug \
           --bind unix:/run/gunicorn.sock \
